<resources>
    <string name="app_name">Prompt</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="welcome_text">Welcome to Prompt!</string>
    <string name="logo">logoimage</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">loginActivity2</string>
    <string name="PromtLogo">TODO</string>
    <string name="welcomeScreen">TODO</string>
    <string name="login">TODO</string>
    <string name="signup">TODO</string>
    <string name="search">TODO</string>
    <string name="addTasks">TODO</string>
    <string name="todo">TODO</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task Name</string>
    <string name="things_to_do_eat_dinner">Things To Do (Eat Dinner)</string>
    <string name="task_nameu">Task Name:</string>
    <string name="location">Location</string>
    <string name="locations">Location:</string>
    <string name="locationSet" />
    <string name="locationHint" />
    <string name="locationHints">Set a Location (30 Albany)</string>
    <string name="start_time">Start Time</string>
    <string name="start_times">Start Time:</string>
    <string name="time_2_30pm">Time (2:30pm)</string>
    <string name="startDate">Date</string>
    <string name="choose_time">Click Here: Choose Time</string>
    <string name="timeInput" />
    <string name="time_set">Time Set:</string>
    <string name="chooseTime">Choose Time</string>
    <string name="end_time">End Time:</string>
    <string name="repeat">Repeat:</string>
    <string name="description">Description:</string>
    <string name="descriptionHint">Description of what you plan to do:  (Go grocery shopping)</string>
    <string name="descriptionhInt">Description of what you plan to do:  \\n(Go grocery shopping)</string>
    <string name="confirm">Confirm</string>
    <string name="lineImage" />
    <string name="lineDraw" />
    <string name="need_database_to_work">Need DATABASE TO WORK</string>
    <string name="first_name">First Name:</string>
    <string name="felixHint">Felix</string>
    <string name="lastName">Last Name:</string>
    <string name="lastNameHint">Carlo</string>
    <string name="age">Age:</string>
    <string name="ageHint">12</string>
    <string name="termsConditions">The purpose of Prompt is to make us pass this paper with an A+ minimum, however by agreeing to our deal you must definetly give us an A+ or else Carlo will treat us dinner!</string>
    <string name="tandC">The purpose of Prompt is to make us pass this paper with an A+ minimum, however by ticking the box below, you are agreeing to giving us an A+ or else Carlo will treat us dinner at any selected location!</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="budget" >Budget:</string>
    <string-array name="names">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>
