<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity_User">

    <EditText
        android:id="@+id/ageTextBox2"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="1"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ageTextBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/budgetTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageTextBox" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="335dp"
        android:layout_height="194dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/PromtLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_screen" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="404dp"
        android:paddingStart="20px"
        android:text="@string/first_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="20px"
        android:text="@string/lastName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/budgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="20px"
        android:text="@string/budget"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ageTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="20px"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/lastNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextView" />

    <EditText
        android:id="@+id/firstNameTextBox"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="388dp"
        android:ems="10"
        android:hint="@string/felixHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <EditText
        android:id="@+id/lastNameTextBox"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTextBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lastNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextBox" />

    <EditText
        android:id="@+id/ageTextBox"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/ageHint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/lastNameTextBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/budgetTextView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextBox" />

    <TextView
        android:id="@+id/termConTextBox"
        android:layout_width="345dp"
        android:layout_height="161dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20px"
        android:text="@string/tandC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/ageTextBox2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/budgetTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageTextBox2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="35dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/termConTextBox"
        app:layout_constraintStart_toStartOf="@+id/termConTextBox" />

    <Button
        android:id="@+id/createAccButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/defaultColor"
        android:text="@string/createAccount"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termConTextBox" />
</androidx.constraintlayout.widget.ConstraintLayout>